# card_games

./: .gitignore  CMakeLists.txt  Makefile  README.md  game
docs/code/: doxyfile
docs/design/: CardsetAndChildren.dia  CardsetAndChildren.dia~  HowToPlayAStandardDeckGame.dia  OneRoundOfCrazy8.dia  OneRoundOfGoFish.dia  OneRoundOfJungleSpeed.dia  afterGameEnds.dia  cardAndChildren.dia  cardAndChildren.dia~  classDiagram.dia  classDiagram.dia~  classDiagramNew.dia  gameAndChildren.dia  gameAndChildren.dia~  playerAnd SubClasses.dia  playerAnd SubClassesACTUAL.dia  playerAnd SubClassesACTUAL.dia~
include/: CrazyEights.h  Discard.h  GameActions.h  Hand.h  JungleSpeedAI.h  StandardCard.h  UI.h
include/controller/: InputHandling.h
include/model/: AI.h  Card.h  CardGenerator.h  CardSet.h  CrazyEightsAI.h  Deck.h  DeckGenerator.h  Game.h  GoFish.h  GoFishAI.h  Human.h  JungleSpeed.h  JungleSpeedCard.h  Player.h
src/: AI.cpp  Card.cpp  Deck.cpp  DeckGenerator.cpp  GoFish.cpp  Hand.cpp  Human.cpp  JungleSpeed.cpp  JungleSpeedAI.cpp  UI.cpp
src/controller/: GameActions.cpp
src/game/: main.cpp
src/model/: CardGenerator.cpp  CardSet.cpp  CrazyEights.cpp  CrazyEightsAI.cpp  Discard.cpp  Game.cpp  GoFish.cpp  GoFishAI.cpp  JungleSpeed.cpp  JungleSpeedCard.cpp  Player.cpp  (+1 more)
test/: TestCrazyEights.cpp  TestCrazyEightsAI.cpp  TestDeck.cpp  TestDeckGenerator.cpp  TestDiscard.cpp  TestGoFish.cpp  TestGoFishAI.cpp  TestHand.cpp  TestHuman.cpp  TestJungleSpeed.cpp  TestJungleSpeedAI.cpp  TestJungleSpeedCard.cpp  TestStandardCard.cpp  TestUI.cpp  testGameActions.cpp
